--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@babel/preset-env": "^7.5.4",
     "@babel/register": "^7.4.4",
     "gulp": "^4.0.2",
-    "gulp-plumber": "^1.2.1",
-    "gulp-watch": "^5.0.1"
-  }
+    "gulp-plumber": "^1.2.1"
+  },
+  "dependencies": {}
 }
